# ubuntu-script-runner-c

./: .gitignore  .lvimrc  00_debian-fresh-install.txt  CMakeLists.txt  CMakePresets.json  HACKING.md  How to Use.md  How_to_Use.md  README.md  buildNrun.BAT  buildproj.sh  example.txt  the_basics.sh  use_Astyle_n_beautify_Minimal.bat
.config/scriptrunner/: apps.txt  backup_destination.txt  backup_dirs.txt  install.txt  renew_system.txt
.github/workflows/: ci.yml  cmake.yml  codacy.yml  codeql.yml  devskim.yml  flawfinder.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: dotfile.c  dotfile.h  download_header.BAT  download_header.sh  git_utils.c  git_utils.h  linux_utils.c  linux_utils.h  main.c  runner.c  runner.h  script.c  sf_c.h
test/: CMakeLists.txt
test/source/: installscriptrunner_test.c
